--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -2,7 +2,9 @@
 title: "Covid91 vaccine study Final2021"
 author: "Put your name here!"
 date: "put the date here"
-output: html_document
+output: 
+    html_document:
+    toc: true
 ---
 
 ```{r include=FALSE,echo=FALSE}
@@ -10,11 +12,11 @@ require(tidyverse)
 require(tigerstats)
 require(forcats)
 OldData <-read.csv(file="covid91.csv",header=TRUE)
-#recode aids to say covid and then remove the annoying "X" from the dataframe
+#recode to remove the annoying "X" from the dataframe
 FinalData <- OldData %>% mutate(infected = recode(infected, aids = "covid", none = "OK" )) %>% select(-one_of("X"))
 ```
 
 # Introduction
 
-A new  preventative vaccine (covid91) is under test in clinical trials. Given the nature of this vaccine it is suspected that the drug may exhibit different effectiveness across the variety of subpopulations tracked. Consider population subgroups by gender( guys and gals), drug use, and sexual orientation. Write a complete report that separately considers this drug for each subgroup and your recommendations as to whether people in the subgroup should take the vaccine.
+A new  preventative vaccine (covid91) is under test in clinical trials. Given the nature of this vaccine it is suspected that the drug may exhibit different effectiveness across the variety of subpopulations tracked. Consider population subgroups by gender( guys and gals), drug use, and sexual orientation. Write a complete report that separately considers this drug for each subgroup and your recommendations as to whether people in the subgroup should take the vaccine. Structure your report in four sections each devoted to one of the four subgroups, use null and alternative hypothesis statements and correct statistical verbage when referencing p-values in conclusions.
 
