added name; basic outline

--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -1,12 +1,13 @@
 ---
 title: "Covid91 vaccine study Final2021"
-author: "Put your name here!"
-date: "put the date here"
+author: "Taylor Stohl"
+date: "Summer 2021"
 output: 
     html_document:
     toc: true
+    toc_depth:5
 ---
-
+ 
 ```{r include=FALSE,echo=FALSE}
 require(tidyverse)
 require(tigerstats)
@@ -14,9 +15,31 @@ require(forcats)
 OldData <-read.csv(file="covid91.csv",header=TRUE)
 #recode to remove the annoying "X" from the dataframe
 FinalData <- OldData %>% mutate(infected = recode(infected, aids = "covid", none = "OK" )) %>% select(-one_of("X"))
+FinalData$treatment <- as.factor(FinalData$treatment)
+FinalData$sex <- as.factor(FinalData$sex)
+FinalData$infected <- as.factor(FinalData$infected)
+FinalData$LGBTQ <- as.factor(FinalData$LGBTQ)
+FinalData$DrugUser <- as.factor(FinalData$DrugUser)
 ```
 
 # Introduction
 
-A new  preventative vaccine (covid91) is under test in clinical trials. Given the nature of this vaccine it is suspected that the drug may exhibit different effectiveness across the variety of subpopulations tracked. Consider population subgroups by gender( guys and gals), drug use, and sexual orientation. Write a complete report that separately considers this drug for each subgroup and your recommendations as to whether people in the subgroup should take the vaccine. Structure your report in four sections each devoted to one of the four subgroups, use null and alternative hypothesis statements and correct statistical verbage when referencing p-values in conclusions.
+A new  preventative vaccine (covid-19) is under test in clinical trials. Given the nature of this vaccine it is suspected that the drug may exhibit different effectiveness across the variety of sub populations tracked. Consider population subgroups by gender( guys and gals), drug use, and sexual orientation. Write a complete report that separately considers this drug for each subgroup and your recommendations as to whether people in the subgroup should take the vaccine. Structure your report in four sections each devoted to one of the four subgroups, use null and alternative hypothesis statements and correct statistical verbiage when referencing p-values in conclusions.
+
+
+# Guys "sex = guy"
+
+
+# Gals "sex = gal"
+
+
+# Sexual Orientation "LGBTQ = gay"
+
+
+# Drug Users "Drug User = yes"
+
+
+# 
+
+
 
