--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -16,20 +16,33 @@ require(forcats)
 OldData <-read.csv(file="covid91.csv",header=TRUE)
 #recode to remove the annoying "X" from the dataframe
 FinalData <- OldData %>% mutate(infected = recode(infected, aids = "covid", none = "OK" )) %>% select(-one_of("X"))
-FinalData$treatment <- as.factor(FinalData$treatment)
-FinalData$sex <- as.factor(FinalData$sex)
-FinalData$infected <- as.factor(FinalData$infected)
-FinalData$LGBTQ <- as.factor(FinalData$LGBTQ)
-FinalData$DrugUser <- as.factor(FinalData$DrugUser)
+FinalData <- FinalData %>%
+mutate(across(where(is.character), as.factor))
+
 guy = filter(FinalData, sex =="guy")
 gal = filter(FinalData, sex =="gal")
 gay = filter(FinalData, LGBTQ =="gay")
 yes = filter(FinalData, DrugUser =="yes")
 ```
 
+
+
+
 # Introduction
 
 A new preventative vaccine (covid-19) is under test in clinical trials. Given the nature of this vaccine it is suspected that the drug may exhibit different effectiveness across the variety of sub populations tracked. Consider population subgroups by gender( guys and gals), drug use, and sexual orientation. Write a complete report that separately considers this drug for each subgroup and your recommendations as to whether people in the subgroup should take the vaccine. Structure your report in four sections each devoted to one of the four subgroups, use null and alternative hypothesis statements and correct statistical verbiage when referencing p-values in conclusions.
+
+
+# Coding details 
+
+First, the variables from FinalData needed to be changed from character variables into factor variables. the appropriate dplyr code was used to do this. The following code was used to achieve this: 
+
+FinalData <- FinalData %>%
+mutate(across(where(is.character), as.factor))
+
+Next, specific subgroups had to be separated from the broader categories in order to properly studied. Gal and guy were separated into subgroups, as well as gay sexual orientation and people that answered yes to participating in drug use. All of these categories are isolated to see weather or not these particular populations should  or should not take the  new covid-19 vaccine.
+
+
 
 
 # Guys 
@@ -54,18 +67,23 @@ basicCC + geom_bar(stat="identity", position = "dodge")
 ```
 
 
+This plot represents the population of guys(males) people and the relationship to the contraction of covid-19 by either talking the vaccine or the placebo. 
 
 
-There are two plots. In first plot,the x-axis represents infected, whether the participants were infected with aids or they were not. The y-axis represents the count, or number of people that got aids or didn't get covid-19.
-In the second plot, the one above, The The left two bars of the graph are all the people that got aids. The x-axis represents whether a person got covid-19 or not. The y-axis, however, instead of representing the number of people who got covid-19, now represents the percentage of people that got aids after taking the the placebo or taking the Vaccine. 
+The plot above shows that a shocking 58% of the people that took the vaccine did in fact get covid-19, while only approximately 42% of the people taking the placebo contracted covid-19.  A substantially higher percentage of people who took tha vaccine contracted covid-19 versus those who were only given the placebo. The vaccine appears to be ineffective in protection against covid-19. The odds of getting covid-19 while taking the vaccine is 3:2. The men that took the drug were one and half times more likely to get covid-19 than those taking the placebo.
+
+
+There are two plots. In first plot,the x-axis represents infected, whether the participants were infected with covid-19 or they were not. The y-axis represents the count, or number of people that got covid-19 or not.
+In the second plot, the one above, The The left two bars of the graph are all the people that got covid-19. The x-axis represents whether a person got covid-19 or not. The y-axis, however, instead of representing the number of people who got covid-19, now represents the percentage of people that got covid-19 after taking the the placebo or taking the Vaccine. 
+
+
+The codes that  create this plot start with the code block beginning with dd2. dd2 can be seen in the environment pane and if inspected contains 4 variables.These variables include infected, treatment, count, and prcent(stands for percent). The second group of codes is called the basicC. BasicC can also be seen in the environment pane and appears to contain a list of 9 variables. This information creates the first plot. The basicCC is the last bunch of codes and is also in the files pane. It also contains 9 variables and helps to create the percentage plot, the second plot.
 
 
 
 
 
-
-
-# gals 
+# Gals 
 
 
 ### Barplot
@@ -84,13 +102,24 @@ basicC + geom_bar(stat="identity",position="dodge")
 basicCC <- ggplot(dd2,aes(x=infected,y=prcnt*100,fill=treatment)) 
 basicCC + geom_bar(stat="identity", position = "dodge")
 ```
+This plot represents the population of gals(females) people and the relationship to the contraction of covid-19 by either talking the vaccine or the placebo. 
+
+In this plot, contrary to the previous, it appears that more people who were only given the placebo contracted covid-19. Only approximately 33% of the individuals who were given the vaccine were reported to have contracted covid-19. That means around 67% of the people that got covid-19 were the individuals that only received the placebo.The odds of getting covid-19 while taking the vaccine is 1:2. The gals that took the vaccine were half as likely to get covid-19 than those taking the placebo.
+
+
+There are two plots. In first plot,the x-axis represents infected, whether the participants were infected with covid-19 or they were not. The y-axis represents the count, or number of people that got covid-19 or not.
+In the second plot, the one above, The The left two bars of the graph are all the people that got covid-19. The x-axis represents whether a person got covid-19 or not. The y-axis, however, instead of representing the number of people who got covid-19, now represents the percentage of people that got covid-19 after taking the the placebo or taking the Vaccine. 
+
+
+
+The codes that  create this plot start with the code block beginning with dd2. dd2 can be seen in the environment pane and if inspected contains 4 variables.These variables include infected, treatment, count, and prcent(stands for percent). The second group of codes is called the basicC. BasicC can also be seen in the environment pane and appears to contain a list of 9 variables. This information creates the first plot. The basicCC is the last bunch of codes and is also in the files pane. It also contains 9 variables and helps to create the percentage plot, the second plot.
 
 
 
 
 
 
-#  Gay Sexual Orientation
+# Gay Sexual Orientation
 
 ### Barplot
 
@@ -108,6 +137,19 @@ basicC + geom_bar(stat="identity",position="dodge")
 basicCC <- ggplot(dd2,aes(x=infected,y=prcnt*100,fill=treatment)) 
 basicCC + geom_bar(stat="identity", position = "dodge")
 ```
+
+
+
+This plot represents the population of gay people and the relationship to the contraction of covid-19 by taking either the vaccine or the placebo.
+
+In this barplot, it appears that a sniffling 71% of the individuals that took the vaccine got covid-19 as well as the 29% who received the placebo. The odds of getting covid-19 while taking the vaccine is 3:1. The individuals who identified as gay and took the vaccine were three times as likely to get covid-19 than those taking the placebo.
+
+
+There are two plots. In first plot,the x-axis represents infected, whether the participants were infected with covid-19 or they were not. The y-axis represents the count, or number of people that got covid-19 or not.
+In the second plot, the one above, The The left two bars of the graph are all the people that got covid-19. The x-axis represents whether a person got covid-19 or not. The y-axis, however, instead of representing the number of people who got covid-19, now represents the percentage of people that got covid-19 after taking the the placebo or taking the Vaccine. 
+
+
+The codes that  create this plot start with the code block beginning with dd2. dd2 can be seen in the environment pane and if inspected contains 4 variables.These variables include infected, treatment, count, and prcent(stands for percent). The second group of codes is called the basicC. BasicC can also be seen in the environment pane and appears to contain a list of 9 variables. This information creates the first plot. The basicCC is the last bunch of codes and is also in the files pane. It also contains 9 variables and helps to create the percentage plot, the second plot.
 
 
 
@@ -132,11 +174,20 @@ basicCC <- ggplot(dd2,aes(x=infected,y=prcnt*100,fill=treatment))
 basicCC + geom_bar(stat="identity", position = "dodge")
 ```
 
+This plot represents the population of people who answered yes to drug use and the relationship to the contraction of covid-19 while taking either the vaccine or the placebo.
+
+This barplot shows that arounf 34% of the people who answered yes to drug use and recieved the vaccine contracted covid-19. This means that around 66% of the drugusers that only took the placebo eded up getting covid-19.The odds of getting covid-19 while taking the vaccine is 1:2. The drugusers that took the vaccine were half as likely to get covid-19 than those taking the placebo.
 
 
 
 
+There are two plots. In first plot,the x-axis represents infected, whether the participants were infected with covid-19 or they were not. The y-axis represents the count, or number of people that got covid-19 or not.
+In the second plot, the one above, The The left two bars of the graph are all the people that got covid-19. The x-axis represents whether a person got covid-19 or not. The y-axis, however, instead of representing the number of people who got covid-19, now represents the percentage of people that got covid-19 after taking the the placebo or taking the Vaccine. 
 
+
+
+
+The codes that  create this plot start with the code block beginning with dd2. dd2 can be seen in the environment pane and if inspected contains 4 variables.These variables include infected, treatment, count, and prcent(stands for percent). The second group of codes is called the basicC. BasicC can also be seen in the environment pane and appears to contain a list of 9 variables. This information creates the first plot. The basicCC is the last bunch of codes and is also in the files pane. It also contains 9 variables and helps to create the percentage plot, the second plot.
 
 
 
