basic numerical results x 4. no description yet. bettter toc

--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -79,9 +79,16 @@ In the second plot, the one above, The The left two bars of the graph are all th
 
 The codes that  create this plot start with the code block beginning with dd2. dd2 can be seen in the environment pane and if inspected contains 4 variables.These variables include infected, treatment, count, and prcent(stands for percent). The second group of codes is called the basicC. BasicC can also be seen in the environment pane and appears to contain a list of 9 variables. This information creates the first plot. The basicCC is the last bunch of codes and is also in the files pane. It also contains 9 variables and helps to create the percentage plot, the second plot.
 
+### Numerical results
+
+```{r}
+table1 <- xtabs(~infected + treatment, data=guy)
+rowPerc(table1)
+colPerc(table1)
+```
 
 
-
+### Inferential 
 
 # Gals 
 
@@ -115,9 +122,16 @@ In the second plot, the one above, The The left two bars of the graph are all th
 The codes that  create this plot start with the code block beginning with dd2. dd2 can be seen in the environment pane and if inspected contains 4 variables.These variables include infected, treatment, count, and prcent(stands for percent). The second group of codes is called the basicC. BasicC can also be seen in the environment pane and appears to contain a list of 9 variables. This information creates the first plot. The basicCC is the last bunch of codes and is also in the files pane. It also contains 9 variables and helps to create the percentage plot, the second plot.
 
 
+### Numerical results
+
+```{r}
+table1 <- xtabs(~infected + treatment, data=gal)
+rowPerc(table1)
+colPerc(table1)
+```
 
 
-
+### Inferential 
 
 # Gay Sexual Orientation
 
@@ -151,8 +165,15 @@ In the second plot, the one above, The The left two bars of the graph are all th
 
 The codes that  create this plot start with the code block beginning with dd2. dd2 can be seen in the environment pane and if inspected contains 4 variables.These variables include infected, treatment, count, and prcent(stands for percent). The second group of codes is called the basicC. BasicC can also be seen in the environment pane and appears to contain a list of 9 variables. This information creates the first plot. The basicCC is the last bunch of codes and is also in the files pane. It also contains 9 variables and helps to create the percentage plot, the second plot.
 
+### Numerical results
 
+```{r}
+table1 <- xtabs(~infected + treatment, data=gay)
+rowPerc(table1)
+colPerc(table1)
+```
 
+### Inferential 
 
 # People that answerd yes to Drug Use
 
@@ -189,6 +210,13 @@ In the second plot, the one above, The The left two bars of the graph are all th
 
 The codes that  create this plot start with the code block beginning with dd2. dd2 can be seen in the environment pane and if inspected contains 4 variables.These variables include infected, treatment, count, and prcent(stands for percent). The second group of codes is called the basicC. BasicC can also be seen in the environment pane and appears to contain a list of 9 variables. This information creates the first plot. The basicCC is the last bunch of codes and is also in the files pane. It also contains 9 variables and helps to create the percentage plot, the second plot.
 
+### Numerical results
 
+```{r}
+table1 <- xtabs(~infected + treatment, data=yes)
+rowPerc(table1)
+colPerc(table1)
+```
 
+### Inferential 
 
