--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -94,6 +94,30 @@ The odds of getting covid-19 while taking the vaccine is 3:2. The men that took 
 
 ### Inferential 
 
+
+
+```{r}
+chisq.test(table1)
+chisqtestGC(table1)
+fisher.test(table1)
+```
+
+
+The information to play close attention to among all of these results is the output of the Fisher's Exact test. The p-value displayed above is extremely small at 0.0006. This is an awfully small number. seeing this number means that these results are not likely to occur by chance and so the null hypothesis can be rejected in favor of the alternative.
+
+
+
+
+The null hypothesis predicted that the deaths related to covid-19 are independent of sex. Since it is clear that sex does play a role in the death rate of individuals, the alternative hypothesis, that there is a correlation between covi-19 deaths and sex, is the favorable option.
+
+Like the odd ratio above illustrates, men died of covid-19 related issues 2.3 times more frequently than women did.
+
+
+
+
+
+
+
 # Gals 
 
 
@@ -141,6 +165,18 @@ The odds of getting covid-19 while taking the vaccine is 1:2 for gals. The gals 
 
 
 ### Inferential 
+
+
+
+
+
+```{r}
+chisq.test(table1)
+chisqtestGC(table1)
+fisher.test(table1)
+```
+
+
 
 # Gay Sexual Orientation
 
@@ -192,6 +228,15 @@ The odds of getting covid-19 while taking the vaccine is 3:1. The individuals wh
 
 ### Inferential 
 
+
+
+
+```{r}
+chisq.test(table1)
+chisqtestGC(table1)
+fisher.test(table1)
+```
+
 # People that are Drugusers
 
 ### Barplot
@@ -241,6 +286,13 @@ The percentage of drug users that took the vaccine and contacted covid-19 is 33%
 
 
 ### Inferential 
+
+
+```{r}
+chisq.test(table1)
+chisqtestGC(table1)
+fisher.test(table1)
+```
 
 
 # Conclusion and recommendations 
