--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -114,6 +114,18 @@ Like the odd ratio above illustrates, men died of covid-19 related issues 2.3 ti
 
 
 
+```{r}
+effectiveness =  1.5  /( 1.5   +1)
+print(effectiveness*100)
+```
+
+```{r}
+low=(1.2/(1.2 + 1))*100
+hi=(1.8/(1.8 +1))*100
+options(digits=2)
+```
+
+## Effectiveness Confidence Interval `r low`  to `r hi`
 
 
 
@@ -175,6 +187,14 @@ chisq.test(table1)
 chisqtestGC(table1)
 fisher.test(table1)
 ```
+
+
+
+The information to play close attention to among all of these results is the output of the Fisher's Exact test. The p-value displayed above is extremely small at 0.0000000000000002. This is an extremely tiny number. seeing this number means that these results are not likely to occur by chance and so the null hypothesis can be rejected in favor of the alternative.
+
+
+The Fishers's Exact Test illustrates that the odds ratio is 0.49.
+gals(Women) who got the drug were about 0.49 times more likely to get covid-19 than women that only took the placebo.
 
 
 
